--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Upload Python Package
+name: GenInfos
 
 on:
   release:
@@ -25,11 +25,15 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install build
         pip install paho-mqtt
         pip install lxml
-    - name: Build package
+    - name: Run Python
       run: python infos/info.py
